removed deprecation warning in JAva 9