@@ -12,13 +12,13 @@ public class UrlUtilTest {
 	public void testSpecificPort() {
 		Pair<String, Integer> urlWithPort = UrlUtil.parseUrlWithPort("http://localhost:1234");
 		Assert.assertEquals("http://localhost", urlWithPort.getLeft());
-		Assert.assertEquals(new Integer(1234), urlWithPort.getRight());
+		Assert.assertEquals(Integer.valueOf(1234), urlWithPort.getRight());
 	}
 
 	@Test
 	public void testDefaultPort() {
 		Pair<String, Integer> urlWithPort = UrlUtil.parseUrlWithPort("http://localhost");
 		Assert.assertEquals("http://localhost", urlWithPort.getLeft());
-		Assert.assertEquals(new Integer(80), urlWithPort.getRight());
+		Assert.assertEquals(Integer.valueOf(80), urlWithPort.getRight());
 	}
 }
